--- a/style.css
+++ b/style.css
@@ -5,4 +5,7 @@ body {
   h1 {
     color: navy;
     margin-left: 20px;
+    font-family:  sans-serif;
+    font-size: 30px;
+    text-shadow: 3px 3px 3px #ababab;
   }
