--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(31, 32, 33);
   }
   
   h1 {
-    color: navy;
+    color: rgb(242, 242, 247);
     margin-left: 20px;
     font-family:  sans-serif;
     font-size: 30px;
