--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   }
   
 h1 {
-    color: rgb(68, 68, 237);
+    color: rgb(255,255, 237);
     margin-left: 20px;
     font-family:  sans-serif;
     font-size: 30px;
